--- a/approach2.ipynb
+++ b/approach2.ipynb
@@ -353,7 +353,7 @@
     {
      "data": {
       "text/plain": [
-       "21774"
+       "21723"
       ]
      },
      "execution_count": 31,
@@ -382,16 +382,16 @@
     {
      "data": {
       "text/plain": [
-       "[('sample.', 5.69035945432406),\n",
-       " ('delicious', 4.894101477840304),\n",
-       " ('beautifully', 4.890349128221754),\n",
-       " ('2018', 4.875197323201151),\n",
+       "[('sample.', 5.746203190540153),\n",
+       " ('gorgeous', 5.3981627015177525),\n",
+       " ('wonderful', 4.948759890378168),\n",
+       " ('beautifully', 4.919980925828125),\n",
+       " ('delicious', 4.916324614625014),\n",
+       " ('2018', 4.890349128221754),\n",
        " ('decade', 4.844187086458591),\n",
-       " ('2020', 4.820281565605037),\n",
-       " ('beautiful', 4.804021044733257),\n",
-       " ('finely', 4.74493212836325),\n",
-       " ('gorgeous', 4.740574822994295),\n",
-       " ('Age', 4.6913478822291435)]"
+       " ('beautiful', 4.820281565605037),\n",
+       " ('2020', 4.77912349311153),\n",
+       " ('finely', 4.7535901911063645)]"
       ]
      },
      "execution_count": 33,
@@ -411,16 +411,16 @@
     {
      "data": {
       "text/plain": [
-       "[('harsh', -5.093750200806762),\n",
-       " ('Simple', -4.919980925828125),\n",
-       " ('dull', -4.852030263919617),\n",
-       " ('vegetal', -4.783316371371566),\n",
-       " ('watery', -4.653960350157523),\n",
-       " ('everyday', -4.48863636973214),\n",
-       " ('bland', -4.465908118654584),\n",
-       " ('Porty', -4.382026634673881),\n",
+       "[('harsh', -5.099866427824199),\n",
+       " ('Simple', -4.962844630259907),\n",
+       " ('vegetal', -4.808111029984782),\n",
+       " ('watery', -4.663439094112067),\n",
+       " ('bland', -4.442651256490317),\n",
+       " ('everyday', -4.406719247264253),\n",
+       " ('awkward', -4.343805421853684),\n",
        " ('pickled', -4.276666119016055),\n",
-       " ('canned', -4.204692619390966)]"
+       " ('dilute', -4.2626798770413155),\n",
+       " ('weedy', -4.219507705176107)]"
       ]
      },
      "execution_count": 34,
@@ -496,7 +496,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11866/12198 (97.28%) correct\n"
+      "11861/12198 (97.24%) correct\n"
      ]
     }
    ],
@@ -513,12 +513,75 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1308/1356 (96.46%) correct\n"
+      "1294/1356 (95.43%) correct\n"
      ]
     }
    ],
    "source": [
     "evaluate(validation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict(doc):\n",
+    "    doc = tokenizer.tokenize(doc)\n",
+    "    score = 0\n",
+    "    scores = []\n",
+    "    for token in doc:\n",
+    "        if token in most_pos:\n",
+    "            score += most_pos[token]\n",
+    "            scores.append((token, most_pos[token]))\n",
+    "        if token in most_neg:\n",
+    "            score += most_neg[token]\n",
+    "            scores.append((token, most_neg[token]))\n",
+    "    return score, scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('A dry, tannicly dessicated wine largely lacking in fruit. Tastes of alcohol and pepper, with just a sprinkle of blackberry juice.',\n",
+       " 0)"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "doc = random.choice(validation)\n",
+    "doc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-5.007965065540377,\n",
+       " [('lacking', -2.580216829592325), ('Tastes', -2.4277482359480516)])"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predict(doc[0])"
    ]
   }
  ],
